networking/httproutes/internet/bike-weather-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bike-weather-auth
  namespace: bike-weather-auth
spec:
  parentRefs:
    - name: envoy-gateway-internet
      namespace: envoy-gateway-internet-system
      sectionName: bike-weather-auth-https
  hostnames:
    - "auth.bike-weather.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bike-weather-auth-server
          port: 9000
