networking/httproutes/internet/fahrrad-wetter-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fahrrad-wetter-http-to-https
  namespace: envoy-gateway-internet-system
spec:
  parentRefs:
    - name: envoy-gateway-internet
      namespace: envoy-gateway-internet-system
      sectionName: fahrrad-wetter-http
  hostnames:
    - "fahrrad-wetter.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
