networking/httproutes/internet/ferienhof-wiesengrund.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ferienhof-wiesengrund
  namespace: ferienhof-wiesengrund
spec:
  parentRefs:
    - name: envoy-gateway-internet
      namespace: envoy-gateway-internet-system
      sectionName: https
  hostnames:
    - "ferienhof-preview.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ferienhof-wiesengrund
          port: 80
