networking/httproutes/internet/open-webui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai
  namespace: open-webui
spec:
  parentRefs:
    - name: envoy-gateway-internet
      namespace: envoy-gateway-internet-system
      sectionName: https
  hostnames:
    - "ai.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "3600s"
        backendRequest: "3600s"
      backendRefs:
        - name: open-webui-service
          port: 8080
