networking/httproutes/internet/paperless-basic-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-basic-auth
  namespace: paperless
spec:
  parentRefs:
    - name: envoy-gateway-internet
      namespace: envoy-gateway-internet-system
      sectionName: https
  hostnames:
    - "docs.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
          headers:
            - name: Authorization
              type: RegularExpression
              value: ".*"
      backendRefs:
        - name: desktop-proxy
          namespace: wol-proxy
          port: 8080
